nextcloud-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    name: nextcloud
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:14.0.3-apache
      restartPolicy: Always
