nextcloud-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    service: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
  - port: 80
    targetPort: 80
