ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
  - host: nextcloud.local
    http:
      paths:
      - path: /
        backend:
          serviceName: nextcloud
          servicePort: 80
